apply plugin: 'java'

version = '1.0'

sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    compile 'io.vertx:vertx-core:3.3.2'
    compile 'io.vertx:vertx-web:3.3.2'
    compile 'com.google.inject:guice:4.1.0'
    testCompile 'io.vertx:vertx-unit:3.3.2'
    testCompile 'junit:junit:4.12'
    testCompile 'org.mockito:mockito-core:1.10.19'
}

jar {
    from {
        (configurations.runtime).collect {
            it.isDirectory() ? it : zipTree(it)
        }
    }
    manifest {
        attributes("Main-Class": "net.brainified.Main" )
    }
}
